connection to db 🆗

--- a/config.env
+++ b/config.env
@@ -1,10 +1,15 @@
 NODE_ENV=production
 API_KEY=abcd1234
 PORT=3000
-DB_PASSWORD=GpmOjPEOx9jOAlro
+
+DB_NAME=Cluster0
+DB_PASS=pn3ewQqiALRyS26N
+DB_URI=mongodb+srv://castillo:<password>@cluster0.9u6nc.mongodb.net/<dbname>?retryWrites=true&w=majority
+
 JWT_SECRET_KEY=btwhowareyoudoingbroiamfineandyou
 JWT_EXPIRED_IN=90d
 JWT_COOKIE_EXPIRED_IN=90
+
 EMAIL_USERNAME=890cf49e7ae74a
 EMAIL_PASSWORD=d8eb383dad67e5
 EMAIL_HOST=smtp.mailtrap.io
